fix some spacing issues and apply transition

--- a/css/style-ltr.css
+++ b/css/style-ltr.css
@@ -7266,7 +7266,7 @@ header {
   margin: 0;
   min-height: 800px;
   width: 100%;
-  background: url("../images/banner.jpg") no-repeat top center fixed;
+  background: url("../images/banner.jpg") no-repeat top center;
   background-size: cover;
   position: relative; }
   header .overlay {
@@ -7316,7 +7316,10 @@ footer {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: 250px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  min-height: 500px;
   color: #CCC;
   background: #000;
   padding: 50px; }
@@ -7333,10 +7336,24 @@ footer {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    widows: 100%; }
-    footer .footer-main .footer-item a {
-      color: #CCC;
-      font-size: 0.7em; }
+    width: 100%; }
+    footer .footer-main .footer-item {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      -ms-flex-pack: distribute;
+          justify-content: space-around;
+      -webkit-box-align: start;
+          -ms-flex-align: start;
+              align-items: flex-start;
+      height: 150px; }
+      footer .footer-main .footer-item a {
+        color: #CCC;
+        font-size: 0.7em; }
     footer .footer-main .footer-social-item {
       display: -webkit-box;
       display: -ms-flexbox;
@@ -7345,10 +7362,13 @@ footer {
       -webkit-box-direction: normal;
           -ms-flex-direction: column;
               flex-direction: column;
-      -webkit-box-align: center;
-          -ms-flex-align: center;
-              align-items: center;
-      widows: 100%; }
+      -webkit-box-pack: start;
+          -ms-flex-pack: start;
+              justify-content: flex-start;
+      -webkit-box-align: start;
+          -ms-flex-align: start;
+              align-items: flex-start;
+      height: 250px; }
       footer .footer-main .footer-social-item .footer-social-item-title {
         margin-bottom: 25px; }
       footer .footer-main .footer-social-item a {
@@ -7359,25 +7379,23 @@ footer {
         display: none; } }
   footer .footer-credit {
     display: block;
-    widows: 100%;
-    margin: 0 auto;
-    padding-top: 25px;
-    font-size: 0.5em; }
+    margin: 0 auto; }
 
 .job-list {
-  widows: 100%;
-  background-color: #EEE5;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-bottom: 100px; }
+  margin-bottom: 100px;
+  padding-top: 50px;
+  background-color: #EEE5; }
   .job-list .btn-load-more {
     width: 75%;
     background-color: #EEE2;
@@ -7393,14 +7411,19 @@ footer {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   border: 1px solid #EEE;
   border-radius: 3px;
   margin: 20px;
   padding: 15px 25px;
-  width: 45%;
+  width: 555px;
+  height: 515px;
   background-color: #FFF;
-  -webkit-box-shadow: 5px 5px 15px #EEE, 5px 5px 15px #EEE;
-          box-shadow: 5px 5px 15px #EEE, 5px 5px 15px #EEE; }
+  -webkit-box-shadow: 15px 15px 25px #EEE;
+          box-shadow: 15px 15px 25px #EEE;
+  -webkit-transition: 0.3s;
+  transition: 0.3s; }
   .job-card .job-card-row {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -7424,8 +7447,8 @@ footer {
       font-weight: 100; }
   .job-card .job-head .job-category p {
     border: 1px solid #000;
-    border-radius: 25px;
-    padding: 10px;
+    border-radius: 50px;
+    padding: 15px 30px;
     font-size: 0.8em; }
   .job-card .job-description {
     width: 90%;
@@ -7455,7 +7478,9 @@ footer {
     border: 1px solid #4DAF7C;
     outline: none;
     border-radius: 10px;
-    font-weight: 200; }
+    font-weight: 200;
+    -webkit-transition: 0.3s;
+    transition: 0.3s; }
     .job-card .job-apply button:hover {
       cursor: pointer; }
   @media (max-width: 450px) {
@@ -7464,20 +7489,14 @@ footer {
           flex-wrap: wrap; }
       .job-card .job-head .job-category {
         margin: 10px auto; } }
-  @media (max-width: 768px) {
-    .job-card {
-      width: 80%; } }
-  @media (min-width: 1200px) {
-    .job-card {
-      width: 30%; } }
   .job-card:hover {
-    margin-bottom: 35px;
-    margin-top: 5px;
-    -webkit-box-shadow: 25px 25px 15px #EEE, 25px 25px 15px #EEE;
-            box-shadow: 25px 25px 15px #EEE, 25px 25px 15px #EEE; }
+    margin-bottom: 30px;
+    margin-top: 10px; }
     .job-card:hover .job-apply button {
       color: #FFF;
-      background-color: #4DAF7C; }
+      background-color: #4DAF7C;
+      -webkit-box-shadow: 1px 1px 15px #CCC;
+              box-shadow: 1px 1px 15px #CCC; }
 
 .filters {
   width: 100%;
@@ -7500,7 +7519,9 @@ footer {
         justify-content: space-around;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    margin: 30px; }
+    margin: 30px;
+    -webkit-transition: 3s;
+    transition: 3s; }
     .filters .buttons .filters-btn {
       display: -webkit-box;
       display: -ms-flexbox;
@@ -7514,7 +7535,8 @@ footer {
               justify-content: center;
       -webkit-box-align: center;
           -ms-flex-align: center;
-              align-items: center; }
+              align-items: center;
+      border-bottom: 1px solid #0000; }
       .filters .buttons .filters-btn:hover {
         border-bottom: 1px solid #000;
         cursor: pointer; }
@@ -7568,6 +7590,6 @@ footer {
 
 html,
 body {
-  font-family: 'Titillium Web', sans-serif; }
+  font-family: "Helvetica Neue", Arial, sans-serif; }
 
 /*# sourceMappingURL=style-ltr.css.map */
